--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,5 +1,5 @@
 app:
   build:
-    image: silinternational/tfc-backup-b2
+    image: silintl/tfc-backup-b2
     dockerfile: ./Dockerfile
   cached: true
