--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -3,7 +3,7 @@
   type: push
   image_name: silintl/tfc-backup-b2
   image_tag: "{{.Branch}}"
-  exclude: (master|main|snyk*)
+  exclude: (main)
   registry: https://index.docker.io/v1/
   encrypted_dockercfg_path: dockercfg.encrypted
 
