--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_API_TOKEN }}  # Use the organization token
+          password: ${{ secrets.GITHUB_TOKEN }}  # Use the organization token
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
