--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -11,31 +11,48 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Log in to GitHub Container Registry using Organization API Token
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}  # Use the organization token
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}
+            ${{ vars.DOCKER_ORG }}/${{ github.event.repository.name }}  # Docker Hub image
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}  # GitHub Container Registry image
           tags: |
             type=ref,event=branch            
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+            # set 'latest' tag for main branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image to Docker Hub
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true      
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push Docker image to GitHub Container Registry
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          # Fixed tag for GitHub Container Registry
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:docker-dev
-            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:silintl-tfc-backup-b2
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
