--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,7 +3,7 @@ name: Build and Publish
 on:
   push:
     branches: [ 'develop' ]
-    tags: [ '*' ]
+    tags: [ 'v*.*.*' ]
 
 jobs:
   build-and-publish:
