--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,10 +2,9 @@ name: Build and Publish
 
 on:
   push:
-    branches: [ 'develop' ]
-    tags: [ '[0-9]+.[0-9]+.[0-9]' ]
+    branches: [ 'main' ]  # Trigger on push to 'main'
+    tags: [ '[0-9]+.[0-9]+.[0-9]' ]  # Trigger on version tags like '0.1.0'
 
-    
 jobs:
   build-and-publish:
     name: Build and Publish Docker image 
@@ -27,7 +26,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-          
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -37,7 +35,6 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             type=ref,event=branch  # Tag with branch name
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/develop' }}  # Tag as 'latest' if it's the 'develop' branch
             type=semver,pattern={{version}},enable=${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
             type=semver,pattern={{major}}.{{minor}},enable=${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
             type=semver,pattern={{major}},enable=${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
@@ -45,7 +42,6 @@ jobs:
             org.opencontainers.image.source=${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
-
 
       - name: Build and push Docker image to Docker Hub and GHCR
         uses: docker/build-push-action@v5
